# slap-my-mac

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  setup.sh
.github/workflows/: deploy.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  isomp4_decode.rs  lib.rs  main.rs  sensor.rs  spu_wake.rs  state.rs  system_volume.rs
