[package]
name = "slap-my-mac"
version = "0.1.0"
description = "Slap My Mac — menu bar slap reactions for Apple Silicon"
authors = ["you"]
edition = "2021"

[lib]
name = "slap_my_mac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
hound = "3.5"
rodio = { version = "0.20", default-features = false, features = [
  "wav",
  "mp3",
  "flac",
  "vorbis",
  "symphonia-isomp4",
  "symphonia-aac",
  "symphonia-aiff",
] }
symphonia = { version = "0.5.4", default-features = false, features = [
  "aac",
  "isomp4",
  "alac",
] }

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = "2.6"
